--- a/nav/.github/workflows/ci_pipeline.yaml
+++ b/nav/.github/workflows/ci_pipeline.yaml
@@ -2,9 +2,9 @@ name: CI with ExtentReports
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   build-and-test:
