--- a/nav/pom.xml
+++ b/nav/pom.xml
@@ -51,21 +51,72 @@
       <artifactId>rest-assured</artifactId>
       <version>5.5.6</version>
       <scope>test</scope>
-</dependency>
-
-<dependency>
-      <groupId>io.rest-assured</groupId>
-      <artifactId>xml-path</artifactId>
-      <version>5.5.6</version>
-      <scope>test</scope>
-</dependency>
-
-<dependency>
-      <groupId>io.rest-assured</groupId>
-      <artifactId>json-schema-validator</artifactId>
-      <version>5.5.6</version>
-      <scope>test</scope>
-</dependency>
+	</dependency>
+	
+	<dependency>
+	      <groupId>io.rest-assured</groupId>
+	      <artifactId>xml-path</artifactId>
+	      <version>5.5.6</version>
+	      <scope>test</scope>
+	</dependency>
+	<dependency>
+	  <groupId>org.testng</groupId>
+	  <artifactId>reportng</artifactId>
+	  <version>1.2.2</version>
+	  <scope>test</scope>
+	</dependency>
+	<dependency>
+	  <groupId>org.slf4j</groupId>
+	  <artifactId>slf4j-simple</artifactId>
+	  <version>2.0.9</version> <!-- Match your slf4j-api version -->
+	</dependency>
+	<dependency>
+	  <groupId>org.freemarker</groupId>
+	  <artifactId>freemarker</artifactId>
+	  <version>2.3.30</version> <!-- This version has VERSION_2_3_30 -->
+	</dependency>
+	
+	
+	<dependency>
+	      <groupId>io.rest-assured</groupId>
+	      <artifactId>json-schema-validator</artifactId>
+	      <version>5.5.6</version>
+	      <scope>test</scope>
+	</dependency>
+	
+	<dependency>
+		  <groupId>com.itextpdf</groupId>
+		  <artifactId>itextpdf</artifactId>
+		  <version>5.5.13.3</version>
+		</dependency>
+		
+		<dependency>
+		  <groupId>com.aventstack</groupId>
+		  <artifactId>extentreports</artifactId>
+		  <version>5.0.9</version> <!-- or latest -->
+		</dependency>
 
 	  </dependencies>
+<build>
+  <testSourceDirectory>src/test/java</testSourceDirectory>
+
+<plugins>
+ <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.13.0</version> <!-- Or a newer version compatible with Java 21 -->
+      </plugin>
+      <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>3.2.5</version> <!-- Or a newer version compatible with Java 21 -->
+    <configuration>
+        <suiteXmlFiles>
+            <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+        </suiteXmlFiles>
+    </configuration>
+</plugin>
+</plugins>
+</build>
+
 </project>
